--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,8 @@ tracing-log = { version = "0.2.0", optional = true }
 tracing-subscriber = { version = "0.3.19", optional = true }
 tracing-tracy = { version = "0.11.4", features = ["flush-on-exit"], optional = true }
 tracy-client = { version = "0.18.2", optional = true }
+twox-hash = "2.1.2"
+csv = "1.4.0"
 
 [target.'cfg(unix)'.dependencies]
 rustix = { version = "1.0.8", features = ["fs", "thread"] }
