--- a/example.toml
+++ b/example.toml
@@ -2,13 +2,16 @@
 # All fields are optional
 
 # The number of files to generate
-files = 10000
+files = 100000
+
+# Write an audit log of all generated files to this path
+audit_output = "audit.db"
 
 # Whether to generate exactly N files
 files_exact = true
 
 # Total amount of random data in bytes
-total_bytes = 0
+total_bytes = 1000000000
 
 # Specific fill byte (0-255)
 # fill_byte = 0
@@ -23,7 +26,7 @@ exact = true
 max_depth = 5
 
 # Number of files per directory
-# ftd_ratio = 1000
+ftd_ratio = 250
 
 # PRNG starting seed
 seed = 42
