--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,7 +69,7 @@ harness = false
 lto = true
 codegen-units = 1
 strip = true
-panic = "abort"
+panic = "immediate-abort"
 
 [profile.dr]
 inherits = "release"
