--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,3 @@
-cargo-features = ["panic-immediate-abort"]
-
 [package]
 name = "ftzz"
 version = "4.0.0"
@@ -71,7 +69,7 @@ harness = false
 lto = true
 codegen-units = 1
 strip = true
-panic = "immediate-abort"
+panic = "abort"
 
 [profile.dr]
 inherits = "release"
